<resources>
    <string name="app_name">InnerSpace</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="default_web_client_id">41764673225-r9ffpgee76aqv9vmvau1bkot35jjt1p6.apps.googleusercontent.com</string>
    <string name="biometric_title">Unlock InnerSpace</string>
    <string name="biometric_subtitle">Use fingerprint or face to continue</string>
    <string name="biometric_cancel">Cancel</string>
    <string name="biometric_failed">Authentication failed</string>
    <string name="welcome_text">Welcome back, InnerSpace explorer </string>
    <string name="quote_text">Loading quote...</string>
    <string name="quote_author">Unknown</string>
    <string name="recent_entries">Recent Entries</string>
    <string name="settings_theme_label">Theme</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_font_size_label">Font Size</string>
    <string name="settings_language_label">Language</string>
    <string name="settings_notifications_label">Daily Notifications</string>
    <string name="settings_enable_notifications">Enable Notifications</string>
    <string name="nav_home">Home</string>
    <string name="nav_journal">Journal</string>
    <string name="nav_settings">Settings</string>
    <string name="entry_title_hint">Title</string>
    <string name="entry_content_hint">Write your thoughts...</string>
    <string name="entry_image_description">Attached image</string>
    <string name="entry_attach_image">Attach Image</string>
    <string name="entry_save_button">Save Entry</string>
    <string name="home_loading_quote">Loading quote...</string>
    <string name="settings_title">Settings</string>
    <string name="settings_theme_desc">Switch between light and dark themes.</string>
    <string name="settings_notifications_desc">Get gentle reminders to journal and view your daily quote.</string>
</resources>
